app/components/Navbar/Navbar.css
nav {
    color: white;
    padding: 2rem 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 4rem;
    position: relative;
}

.nav-head {
    font-size: 30px;
    font-weight: 800;
    font-style: italic;
    letter-spacing: 5px;
    text-transform: uppercase;
    color: #8ff3de;
    background-image: -webkit-linear-gradient(45deg, #8ff3de 31%, #141aeb 62%);
    background-clip: text;
    -webkit-background-clip: text;
    text-fill-color: transparent;
    -webkit-text-fill-color: transparent;
}

.nav-menu {
    display: flex;
    opacity: 1;
    transition: all 0.5s ease;
    justify-content: flex-end;
    align-items: center;
}

.nav-menu a {
    color: white;
    text-decoration: none;
    font-size: 1.2rem;
    font-weight: 200;
    margin: 0 1rem;
}

.download-cv {
    border: 1px solid #fff;
    color: white;
    background-color: transparent;
    padding: 10px 20px;
    margin: 0 1rem;
    border-radius: 5px;
    font-size: 1.2rem;
    font-weight: 200;
    cursor: pointer;
    transition: all 0.6s;
}

.download-cv:hover {
    background-color: #fff;
    color: #333;
}

.nav-menu-sm{
    display: none;
}

@media screen and (max-width: 1140px) {
    .nav-menu {
        display: none;
    }
    .nav-menu-sm{
        display: block;
    }
    
}
    

@media screen and (max-width: 880px){
    nav{
        margin: 0 1.5rem;
        padding: 1.5rem 0;
    }
    .nav-head{
        font-size: 20px;
    }
    .download-cv{
        padding: 5px 10px;
        font-size: 0.8rem;
    }
}

